# Grace-Compiler

./: FunctionVisitorOLDDEC.java  Paratiriseis.txt  README.md  Stmts.grammar  dianomhkwdika.txt
Ergasia1/: AUTHORS.md  Main.java  Printer.java  README.md  makefile
Ergasia1/compiler/: Main.java  Printer.java
Ergasia2/: AUTHORS.md  README.md  makefile  parser.grammar
Ergasia2/compiler/: Main.java  input2.txt
Ergasia2/compiler/analysis/: DepthFirstAdapter.java
Ergasia2/compiler/examples/: bsort_grace_ir.txt  hello.grace  primes.grace
Ergasia2/compiler/lexer/: Lexer.java
Ergasia2/compiler/node/: AAssignmentStmt.java  ABlockStmt.java  ACharDataTypes.java  ACharExpr.java  AFunCal.java  AFunLocalDef.java  AHeader.java  AIdBracketsLVal.java  AIdLVal.java  AIfElseStmt.java  AIfstmtStmt.java  AModExpr.java  AMultExpr.java  ANoElseIfTrail.java  ANoneFparDef.java  AOrExprExpr.java  (+34 more)
Ergasia3/: README.txt  makefile
Ergasia3/compiler/: Main.java
Palios_kwdikas/Compilers2/: Wtf.java  backup.txt  main.java  makefile
Palios_kwdikas/Compilers3/: ManyClasses.spg
Palios_kwdikas/Compilers4/: spiglet.jj
gracec/src/: Main.java
skeleton.c/: Makefile.am  Makefile.in  README  configure  configure.ac
skeleton.c/src/: Makefile.am  Makefile.in  compiler.c  lexer.c  lexer.l  parser.c  parser.y
testcases-lexer-failed/: comments-error.grc  comments-error2.grc  comments-error3.grc  expressions-tricky1.grc  functions-error4.grc  functions-error5.grc  functions-error6.grc  garbage2.grc  statements-error2.grc  statements-tricky2.grc  strings-error1.grc  strings-error4.grc
(+484 files in other folders)
